2014-06-19  Anders Carlsson  <andersca@apple.com>

        Add WTF::Optional class
        https://bugs.webkit.org/show_bug.cgi?id=134083

        Reviewed by Andreas Kling.

        * WTF.xcodeproj/project.pbxproj:
        * wtf/Optional.h: Added.
        (WTF::Optional::Optional):
        (WTF::Optional::~Optional):
        (WTF::Optional::operator bool):
        (WTF::Optional::value):

2014-06-19  Dániel Bátyai  <dbatyai.u-szeged@partner.samsung.com>

        Remove ENABLE(LLINT) and ENABLE(LLINT_C_LOOP) guards
        https://bugs.webkit.org/show_bug.cgi?id=130389

        Reviewed by Mark Lam.

        Removed ENABLE(LLINT) since we always build with it, and changed ENABLE(LLINT_C_LOOP)
        into !ENABLE(JIT) since they are mutually exclusive.

        * wtf/OSAllocatorPosix.cpp:
        (WTF::OSAllocator::reserveAndCommit):
        * wtf/Platform.h:

2014-06-18  Anders Carlsson  <andersca@apple.com>

        Add CF type cast function templates and use them in KeyedDecoder in WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=134033

        Reviewed by Sam Weinig.

        * WTF.xcodeproj/project.pbxproj:
        * wtf/cf/TypeCasts.h: Added.
        (WTF::dynamic_cf_cast):
        Returns null if the given CFTypeRef object doesn't have the right type.

        (WTF::checked_cf_cast):
        ASSERTs (with security implication) if the given CFTypeRef object is null or doesn't have the right type.

2014-06-17  Tamas Gergely  <tgergely.u-szeged@partner.samsung.com>

        Misused PLATFORM(MIDDLE_ENDIAN) and PLATFORM(BIG_ENDIAN).
        https://bugs.webkit.org/show_bug.cgi?id=128301

        Reviewed by Daniel Bates.

        Endianness is a CPU attribute, not a PLATFORM. PLATFORM() macro is replaced to CPU().

        * wtf/text/ASCIIFastPath.h:
        (WTF::copyLCharsFromUCharSource):

2014-06-17  Andreas Kling  <akling@apple.com>

        Web process main thread priority is lower than some network process threads.