@@ -1,3 +1,14 @@
+2014-06-20  Anders Carlsson  <andersca@apple.com>
+
+        Add copy/move constructors and assignment operators to WTF::Optional
+        https://bugs.webkit.org/show_bug.cgi?id=134119
+
+        Reviewed by Andreas Kling.
+
+        * wtf/Optional.h:
+        (WTF::Optional::Optional):
+        (WTF::Optional::operator=):
+
 2014-06-19  Anders Carlsson  <andersca@apple.com>
 
         Add WTF::Optional class
